display x on click

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="allContainer">
         <div class="gameContainer"></div>
     </div>
+    <div class="buttons">
+        <button id="getPlayer">New Player</button>
+    </div>
     
 </body>
 </html>
