restart project from HTML after studying

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
     <div class="allContainer">
         <div class="gameContainer"></div>
     </div>
     <div class="buttons">
-        <button id="getPlayer">New Player</button>
+        <label for="playerInput">Player name:</label>
+        <input type="text" id="playerInput" >
+        <button id="getPlayer">Add Player</button>
+        <button id="resetButton">Reset Players</button>
     </div>
     
 </body>
