--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 </head>
 <body>
     <div class="allContainer">
-        <div class="gameContainer"></div>
+        <div id="gameContainer"></div>
     </div>
     <div class="buttons">
-        <label for="playerInput">Player name:</label>
-        <input type="text" id="playerInput" >
-        <button id="getPlayer">Add Player</button>
-        <button id="resetButton">Reset Players</button>
+        <button id="resetButton">Reset Round</button>
     </div>
     
 </body>
