--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <div class="allContainer">
-        <div id="gameContainer"></div>
+        <div id="gameContainer">
+            <div class="gameDiv" id="gameCell0"></div>
+            <div class="gameDiv" id="gameCell1"></div>
+            <div class="gameDiv" id="gameCell2"></div>
+            <div class="gameDiv" id="gameCell3"></div>
+            <div class="gameDiv" id="gameCell4"></div>
+            <div class="gameDiv" id="gameCell5"></div>
+            <div class="gameDiv" id="gameCell6"></div>
+            <div class="gameDiv" id="gameCell7"></div>
+            <div class="gameDiv" id="gameCell8"></div>
+        </div>
     </div>
     <div class="buttons">
         <button id="resetButton">Reset Round</button>
