--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <div class="allContainer">
         <div id="gameContainer">
-            <div class="gameDiv" id="gameCell0"></div>
-            <div class="gameDiv" id="gameCell1"></div>
-            <div class="gameDiv" id="gameCell2"></div>
-            <div class="gameDiv" id="gameCell3"></div>
-            <div class="gameDiv" id="gameCell4"></div>
-            <div class="gameDiv" id="gameCell5"></div>
-            <div class="gameDiv" id="gameCell6"></div>
-            <div class="gameDiv" id="gameCell7"></div>
-            <div class="gameDiv" id="gameCell8"></div>
+            <div class="gameDiv" id="0"></div>
+            <div class="gameDiv" id="1"></div>
+            <div class="gameDiv" id="2"></div>
+            <div class="gameDiv" id="3"></div>
+            <div class="gameDiv" id="4"></div>
+            <div class="gameDiv" id="5"></div>
+            <div class="gameDiv" id="6"></div>
+            <div class="gameDiv" id="7"></div>
+            <div class="gameDiv" id="8"></div>
         </div>
     </div>
     <div class="buttons">
