--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Tic-Tac-Toe</title>
 </head>
 <body>
+    <div id="results"></div>
     <div class="allContainer">
         <div id="gameContainer">
             <div class="gameDiv" id="0"></div>
@@ -23,7 +24,7 @@
         </div>
     </div>
     <div class="buttons">
-        <button id="resetButton">Reset Round</button>
+        <button id="resetButton">New Game</button>
     </div>
     
 </body>
