update winning message

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <div class="buttons">
         <button id="resetButton">New Game</button>
     </div>
-    
+    <label for="namen">Name:</label>
+    <input type="text" id="nameValue">
+    <button id="namen"></button>
+
 </body>
 </html>
