final game push

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <div class="buttons">
         <button id="resetButton">New Game</button>
     </div>
+    <div class="names">
     <label for="namen">Name:</label>
     <input type="text" id="nameValue">
-    <button id="namen"></button>
+    <button id="namen">Submit Name</button>
+    </div>
 
 </body>
 </html>
